@@ -24,8 +24,7 @@
     <dependency>
         <groupId>org.testng</groupId>
         <artifactId>testng</artifactId>
-        <version>7.10.1</version> <!-- Use the latest version available -->
-        <scope>test</scope>
+        <version>7.9.0</version> <!-- Use the latest version available -->
     </dependency>
     
     <!--   extent reporting -->
@@ -43,6 +42,45 @@
     <artifactId>commons-io</artifactId>
     <version>2.11.0</version>
   </dependency>
+  
+  <dependency>
+  <groupId>org.projectlombok</groupId>
+  <artifactId>lombok</artifactId>
+  <version>1.18.30</version>
+  <scope>provided</scope>
+</dependency>
+
     
 </dependencies>
+
+  <build>
+    <plugins>
+      <!-- Surefire Plugin -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M9</version>
+        <configuration>
+          <!-- Point to testng.xml -->
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+      
+      <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <version>3.11.0</version>
+  <configuration>
+    <compilerArgs>
+      <arg>--add-opens</arg>
+      <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+    </compilerArgs>
+    <release>17</release> <!-- or 20 if you're targeting Java 20 -->
+  </configuration>
+</plugin>
+    </plugins>
+  </build>
+
 </project>
